Closes #2 Implements a CLI entry point